[package]
name = "dragonfight"
version = "0.1.0"
authors = ["Grissess <grissess@nexusg.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogue_util = {git = "https://github.com/Grissess/rogue_utils"}
bit-set = "^0.5.2"
rand = "^0.8.3"
